--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -3,7 +3,10 @@
   <a href="{% url 'learning_logs:topics' %}">Topics</a> -
   {% if user.is_authenticated %}
     Hello, {{ user.username }}!
-    <a href="{% url 'users:logout' %}">Logout</a>
+    <form action="{% url 'users:logout' %}" method="post">
+      {% csrf_token %}
+      <button type="submit" >Logout</button>
+    </form>
   {% else %}
     <a href="{% url 'users:login' %}">Log in</a>
   {% endif %}
