fix page header bug

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -45,7 +45,7 @@
   
   <main role="main" class="container">
     <div class="pb-2 mb-2 border-bottom">
-      {% block header %}{% endblock header %}
+      {% block page_header %}{% endblock page_header %}
     </div>
     <div class="content">
       {% block content %}
