--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -34,9 +34,14 @@
           <li class="nav-item">
             <span class="navbar-text">Hello, {{ user.username }}!</span>
           </li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'users:logout' %}">Logout</a></li>
+          <li class="nav-item">
+            <form action="{% url 'users:logout' %}" method="post">
+              {% csrf_token %}
+              <button type="submit">Logout</button>
+            </form>
+          </li>
         {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'users:login' %}">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'users:login' %}">Log In</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'users:register' %}">Register</a></li>
         {% endif %}
       </ul>
