--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,16 +1,20 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+  <h1>Log in to your account.</h1>
+{% endblock page_header %}
+
 
 {% block content %}
 
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
-  <form method="post" action="{% url 'users:login' %}">
+  <form method="post" action="{% url 'users:login' %}" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% bootstrap_form form %}
 
-    <button type="submit">Log in</button>
+    {% buttons %}
+      <button type="submit" class="btn btn-primary">Log in</button>
+    {% endbuttons %}
     <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" >
   </form>
 
